k8s/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcl-cs-identity
spec:
  selector:
    app: hcl-cs-identity
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
